<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#000000">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="text"
        android:background="#FFFFFF"
        android:layout_margin="5dp">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/senha"
        android:textColor="#FFFFFF"/>
    
    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:background="#FFFFFF"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="entrarOnClick"
        android:text="@string/entrar"/>

</LinearLayout>
